examples/test/testpolicy17983.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17983
  namespace: namespace211
spec:
  podSelector:
    matchLabels:
      key4: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value22
          key48: value14
          key44: value34
      podSelector:
        matchLabels:
          key1: value8
          key45: value6
          key35: value12
